--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,5 +26,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Poetry'
 - !lcc 'PH'
+- GITenberg
 title: Elegioja
 url: http://www.gutenberg.org/ebooks/20145
